force-app/main/default/objects/CCL_Message__c/CCL_Message__c.object-meta.xml
<CustomObject>
    <label>CCL Message</label>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCL Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>