force-app/main/default/objects/CCL_Message__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>MessageRequest</relationshipName>
    <type>Lookup</type>
</CustomField>