force-app/main/default/objects/CCL_Message__c/fields/DEMORecipients__c.field-meta.xml
<CustomField>
    <fullName>DEMORecipients__c</fullName>
    <label>DEMO Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>