force-app/main/default/objects/CCL_Message__c/fields/NotificationKey__c.field-meta.xml
<CustomField>
    <fullName>NotificationKey__c</fullName>
    <label>Notification Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>