force-app/main/default/objects/CCL_Message__c/fields/TemplateKey__c.field-meta.xml
<CustomField>
    <fullName>TemplateKey__c</fullName>
    <inlineHelpText>Unique Key of the template to be used for the notification</inlineHelpText>
    <label>Template Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>